# open_ksa

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  download_all_org.py  pyproject.toml  requirements.txt  system-drawing.excalidraw
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/workflows/: master-pr.yaml  publish-to-pypi.yml
examples/: 1_download_data.ipynb  organizations_example.py  showcase.ipynb
open_ksa/: __init__.py  organizations.py
open_ksa/tests/: test_organizations.py
src/: download_file.py  get_dataset_resources.py  get_org_resources.py
