[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open_ksa"
version = "0.0.2"
description = "Commands to download datasets from the Open Data portal of the Kingdom of Saudi Arabia (KSA)."
authors = [
    { name = "Esteban Valencia", email = "me@estebanvalencia.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "requests==2.32.3",
    "urllib3==2.2.3"
]

[tool.setuptools]
packages = ["open_ksa"]

[project.optional-dependencies]
dev = [
    "pytest==7.0"
]
