[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open_ksa"
version = "0.1.1"
description = "Commands to download datasets from the Open Data portal of the Kingdom of Saudi Arabia (KSA)."
authors = [
    { name = "Esteban Valencia", email = "me@estebanvalencia.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9.1"
dependencies = [
    "requests>=2.32.3",
    "urllib3>=2.2.3"
]
homepage = "https://github.com/Esturban/open_ksa"
repository = { type = "git", url = "https://github.com/Esturban/open_ksa.git" } 


keywords = ["open data", "KSA", "datasets", "API"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
maintainers = [
    { name = "Esteban Valencia", email = "me@estebanvalencia.com" }
]
[project.urls]
homepage = "https://github.com/Esturban/open_ksa#readme"
source =  "https://github.com/Esturban/open_ksa"
download = "https://pypi.org/project/open_ksa/#files"
tracker = "https://github.com/Esturban/open_ksa/issues"

[tool.setuptools]
packages = ["open_ksa"]

[project.optional-dependencies]
dev = [
    "pytest==7.0"
]
